--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Keycodegen</title>
 </head>
 <body>
     <div id="page1">Press any button to get JS information</div>
